force-app/main/default/objects/Plant_Location_Product__c/Plant_Location_Product__c.object-meta.xml
<CustomObject>
    <label>Plant Location Product</label>
    <nameField>
        <label>Plant Location Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Location Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>