force-app/main/default/objects/Plant_Location_Product__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products at Plant Location</relationshipLabel>
    <relationshipName>Plant_Location_Products</relationshipName>
    <type>Lookup</type>
</CustomField>