force-app/main/default/objects/Plant_Location_Product__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Plant Location Products</relationshipLabel>
    <relationshipName>Plant_Location_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>