force-app/main/default/objects/Plant_Location_Product__c/fields/Plant_Location__c.field-meta.xml
<CustomField>
    <fullName>Plant_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Location</label>
    <referenceTo>Plant_Location__c</referenceTo>
    <relationshipLabel>Plant Location Products</relationshipLabel>
    <relationshipName>Plant_Location_Producta</relationshipName>
    <type>Lookup</type>
</CustomField>